--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,6 @@ sqlparse==0.4.2
 typing_extensions==4.0.1
 uritemplate==4.1.1
 urllib3==1.26.7
+urllib3==1.26.7
+gunicorn==20.1.0
+whitenoise==6.0.0
